Show team names correctly in dark mode on chroma timer

--- a/src/display/display.css
+++ b/src/display/display.css
@@ -127,6 +127,10 @@
     text-align: center;
 }
 
+.dark #timer-team-info-wrapper{
+    background-color: var(--bs-dark);
+}
+
 #timer-team-info{
     max-width: 95%;
     margin: 0 auto;
